Fix display on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,8 +38,9 @@ nav img{
 }
 
 .logo-img {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
+    margin-top: -5px;
 }
 
 .logo-name {
